# question-decisiveness

./: README.md  pyproject.toml
examples/: offline_demo.py  run_model.py  run_openrouter.py
question_decisiveness/: __init__.py  decisiveness.py  elicit.py  prompts.py
tests/: test_decisiveness.py
